# Tfim-vqe-symmetry-bench

./: .gitignore  CHANGELOG.md  DEPENDENCIES.md  Makefile  QCE_paper_draft.md  README.md  V22_CONTINUE_SUMMARY.md  baseline_capture_study_behavior_crossover.csv  baseline_capture_study_behavior_optimizers.csv  baseline_capture_study_behavior_regimes.csv  baseline_capture_study_summary.csv  dependency_audit.json  dependency_audit.md  fieldline_vqe_hardened_v24_SUMMARY.md  fieldline_vqe_hardened_v25_SUMMARY.md  pyproject.toml  release_manifest_v26.json  release_manifest_v26.md  release_verify.json  release_verify.md  requirements-dev.txt  requirements-runtime.txt  requirements.txt  setup.py  surface_audit.json  surface_audit.md  tmp_equal_nearcrit_behavior.json  tmp_equal_nearcrit_behavior_optimizers.csv  tmp_equal_nearcrit_behavior_report.md  tmp_equal_nearcrit_raw.csv  tmp_live_runtime_smoke.json  tmp_varw_nearcrit.json  tmp_varw_nearcrit_behavior_ansatz.csv  tmp_varw_nearcrit_behavior_crossover.csv  tmp_varw_nearcrit_behavior_regimes.csv  tmp_varw_nearcrit_behavior_report.md  tmp_wide_crossover.json  tmp_wide_crossover_behavior_optimizers.csv  tmp_wide_crossover_penalty025_behavior_regimes.csv  tmp_wide_crossover_penalty025_behavior_report.md  (+12 more)
docs/notes/: what_surprised_me.md
results/baselines/: baseline_capture_single.json  (+7 more)
tests/: test_config.py  test_execution.py  test_hardening.py
tools/: __init__.py  audit_deps.py  audit_surface.py  build_native.py  capture_baseline.py  compare_baseline.py  live_runtime_smoke.py  package_release.py  verify_release.py
(+84 files in other folders)
